# BlazeEngine

./: .gitignore  CMakeLists.txt  README.MD  vcpkg.json
Engine/: CMakeLists.txt
Engine/src/blaze/: Blaze.cpp  Blaze.h  Core.h
Engine/src/blaze/app/: App.cpp  App.h
Engine/src/blaze/mesh/: Mesh.cpp  Mesh.h
Engine/src/blaze/render/: Texture.cpp  Texture.h
Engine/src/blaze/render/layer/: Layer.cpp  Layer.h
Engine/src/blaze/render/math/: Transformation.cpp  Transformation.h
Engine/src/blaze/render/mesh/: Mesh.cpp  Mesh.h
Engine/src/blaze/render/renderer/: Render.h  Renderer.cpp  Renderer.h
Engine/src/blaze/render/shader/: Shader.cpp  Shader.h
Engine/src/blaze/scene/: Scene.cpp  Scene.h
Engine/src/blaze/scene/entity/: Entity.cpp  Entity.h
Engine/src/blaze/scene/entity/components/: Components.h
Engine/src/blaze/shader/: Shader.cpp  Shader.h
Engine/src/blaze/utils/: Math.h  Transformation.cpp  Transformation.h
Engine/src/blaze/window/: Window.cpp  Window.h
Sandbox/: CMakeLists.txt
Sandbox/res/: fragment.glsl  vertex.glsl
Sandbox/src/: Sandbox.cpp
